--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,6 @@
 /*===== GOOGLE FONTS =====*/
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
 
 /*-------OPCIONES-DEL-NAVBAR--PARA-CAMBIAR-ESTILOS-GENERALES-----------*/
 :root{
