--- a/css/home.css
+++ b/css/home.css
@@ -51,6 +51,15 @@
 
 /*----------------------CSS-PARA-LA-SECCION-DE-PERFIL--------*/
 
+#movie-card{
+  margin-top: 15px;
+  /* background-color: #000000;
+  color: white; */
+  height: 21.5rem;
+  border-radius: 10px;
+  padding: 10px;
+}
+
 #alerta{
   width: auto;
 }
@@ -295,6 +304,10 @@ a{
       /* position:relative; */
       z-index:1;
   }
+}
+
+.p-2{
+padding: 0 !important;
 }
 
 /* ===== MEDIA QUERIES=====*/
